--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,5 +17,6 @@ jobs:
         run: |
           ssh -p 5000 Administrator@cdn-src.honeyworks.info "\
           cd C:\project\HoneyWorks-Info-i18n && \
-          git pull"
+          git pull && \
+          qshell upload qshell qupload -c 100 C:\project\HWPL_api_backend\tools\qshell\sync-i18n.config.json"
     
