--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
           ssh -p 5000 Administrator@cdn-src.honeyworks.info "\
           cd C:\project\HoneyWorks-Info-i18n && \
           git pull && \
-          qshell upload qshell qupload -c 100 C:\project\HWPL_api_backend\tools\qshell\sync-i18n.config.json"
+          qshell qupload -c 100 C:\project\HWPL_api_backend\tools\qshell\sync-i18n.config.json"
     
